[gd_scene load_steps=9 format=1]

[ext_resource path="res://hangar.gd" type="Script" id=1]
[ext_resource path="res://art/hangarbg1.png" type="Texture" id=2]
[ext_resource path="res://art/buttons2.png" type="Texture" id=3]
[ext_resource path="res://art/tank1.png" type="Texture" id=4]
[ext_resource path="res://art/shooter1.png" type="Texture" id=5]
[ext_resource path="res://art/ui1.png" type="Texture" id=6]
[ext_resource path="res://mbuttons.tres" type="SpriteFrames" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "b",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "a",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "n",
"speed": 5.0
} ]

[node name="hangar" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite 2" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 279.0
margin/bottom = 135.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.81, 0.8 )
params/stretch_mode = 0

[node name="mechspritea" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 303, 491 )
transform/scale = Vector2( 0.73, 0.73 )
frames = SubResource( 1 )
animation = "b"

[node name="mechspritec" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 1277, 491 )
transform/scale = Vector2( 0.73, 0.73 )
frames = SubResource( 1 )
animation = "b"

[node name="mechspriteb" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 784, 518 )
transform/scale = Vector2( 0.78, 0.781 )
frames = SubResource( 1 )
animation = "b"

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 800, 1051 )
texture = ExtResource( 6 )

[node name="mbuttona" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 296, 1060 )
frames = ExtResource( 7 )
animation = "n"

[node name="mecha" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 181.0
margin/top = 998.0
margin/right = 416.0
margin/bottom = 1111.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="mbuttonb" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 795, 1068 )
frames = ExtResource( 7 )
animation = "n"

[node name="mechb" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 680.0
margin/top = 1010.0
margin/right = 908.0
margin/bottom = 1127.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="mbuttonc" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 1320, 1063 )
frames = ExtResource( 7 )
animation = "n"

[node name="mechc" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1204.0
margin/top = 1008.0
margin/right = 1437.0
margin/bottom = 1120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]

[connection signal="pressed" from="mecha" to="." method="_on_mecha_pressed"]

[connection signal="pressed" from="mechb" to="." method="_on_mechb_pressed"]

[connection signal="pressed" from="mechc" to="." method="_on_mechc_pressed"]


